# home-cctv

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
apps/egress-server/: CMakeLists.txt
apps/egress-server/src/: main.cpp
apps/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/api/: cameras.ts  client.ts  streams.ts
apps/frontend/src/components/: CameraCard.tsx  CameraForm.tsx  HlsPlayer.tsx  Layout.tsx
apps/frontend/src/pages/: AdminPage.tsx  ViewerPage.tsx
apps/frontend/src/types/: index.ts
apps/ingestion-server/: CMakeLists.txt
apps/ingestion-server/src/: main.cpp
apps/ingestion-server/src/adapters/inbound/http/: HttpApiServer.cpp  HttpApiServer.hpp
apps/ingestion-server/src/adapters/inbound/rtsp/: RtspReceiver.cpp  RtspReceiver.hpp
apps/ingestion-server/src/adapters/outbound/events/: LogEventPublisher.hpp
apps/ingestion-server/src/adapters/outbound/hls/: HlsSegmentWriter.cpp  HlsSegmentWriter.hpp  LlHlsWriter.cpp  LlHlsWriter.hpp
apps/ingestion-server/src/adapters/outbound/sqlite/: CameraRepository.cpp  CameraRepository.hpp
apps/ingestion-server/src/adapters/outbound/storage/: FMp4Writer.cpp  FMp4Writer.hpp
apps/ingestion-server/src/application/: CameraService.cpp  CameraService.hpp  StreamManager.cpp  StreamManager.hpp
apps/ingestion-server/src/domain/entities/: Camera.hpp  Stream.hpp
apps/ingestion-server/src/domain/ports/inbound/: ICameraService.hpp  IStreamService.hpp
apps/ingestion-server/src/domain/ports/outbound/: ICameraRepository.hpp  ISegmentWriter.hpp  IStreamEventPublisher.hpp
docs/impl-notes/: phase-1-rtsp-hls.md
docs/specs/: phase-1-ll-hls.md  phase-1-rtsp-hls.md
docs/specs/adr/: 001-hexagonal-architecture.md  002-ffmpeg-avformat-rtsp.md  003-storage-sqlite-fmp4.md  004-inter-server-communication.md
docs/test-log/: phase-1-initial.md
